<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:ellipsize="end"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:theme="@style/LoginEditTextTheme" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_widget_margin_top"
        android:ellipsize="end"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:theme="@style/LoginEditTextTheme" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_widget_margin_top"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:theme="@style/LoginEditTextTheme" />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_widget_margin_top"
        android:background="@drawable/login_button_selector"
        android:text="@string/create_account"
        android:textColor="@color/login_button_text_color" />
</RelativeLayout>